@@ -64,6 +64,7 @@ extern bool force_load_state;
 extern bool use_quick_reboot;
 extern bool pc98_force_ibm_layout;
 extern bool enable_config_as_shell_commands;
+bool dos_kernel_disabled = true;
 bool winrun=false, use_save_file=false;
 bool maximize = false, direct_mouse_clipboard=false;
 bool mountfro[26], mountiro[26];
@@ -116,6 +117,7 @@ void GFX_OpenGLRedrawScreen(void);
 #include "glidedef.h"
 #include "inout.h"
 #include "../dos/cdrom.h"
+#include "../dos/drives.h"
 #include "../ints/int10.h"
 #if !defined(HX_DOS)
 #if !defined(__MINGW32__) || defined(__MINGW64_VERSION_MAJOR)
@@ -267,6 +269,7 @@ void d3d_init(void);
 bool TTF_using(void);
 void ShutDownMemHandles(Section * sec);
 void resetFontSize(), decreaseFontSize();
+void MAPPER_ReleaseAllKeys(), GFX_ReleaseMouse();
 void GetMaxWidthHeight(int *pmaxWidth, int *pmaxHeight);
 int GetNumScreen();
 extern SHELL_Cmd cmd_list[];
@@ -329,7 +332,6 @@ BOOL CALLBACK EnumDispProc(HMONITOR hMon, HDC dcMon, RECT* pRcMon, LPARAM lParam
 }
 #endif
 extern int dos_clipboard_device_access;
-extern bool dos_kernel_disabled;
 extern bool sync_time, manualtime;
 extern bool bootguest, bootfast, bootvm;
 extern int bootdrive, resolveopt;
@@ -398,7 +400,12 @@ bool drive_mounthd_menu_callback(DOSBoxMenu * const menu,DOSBoxMenu::item * cons
 
     if (dos_kernel_disabled) return true;
 
+    MAPPER_ReleaseAllKeys();
+    GFX_LosingFocus();
+    GFX_ReleaseMouse();
     MenuBrowseFolder(drive+'A', "LOCAL");
+    MAPPER_ReleaseAllKeys();
+    GFX_LosingFocus();
 
     return true;
 }
@@ -420,7 +427,12 @@ bool drive_mountcd_menu_callback(DOSBoxMenu * const menu,DOSBoxMenu::item * cons
 
     if (dos_kernel_disabled) return true;
 
+    MAPPER_ReleaseAllKeys();
+    GFX_LosingFocus();
+    GFX_ReleaseMouse();
     MenuBrowseFolder(drive+'A', "CDROM");
+    MAPPER_ReleaseAllKeys();
+    GFX_LosingFocus();
 
     return true;
 }
@@ -442,7 +454,12 @@ bool drive_mountfd_menu_callback(DOSBoxMenu * const menu,DOSBoxMenu::item * cons
 
     if (dos_kernel_disabled) return true;
 
+    MAPPER_ReleaseAllKeys();
+    GFX_LosingFocus();
+    GFX_ReleaseMouse();
     MenuBrowseFolder(drive+'A', "FLOPPY");
+    MAPPER_ReleaseAllKeys();
+    GFX_LosingFocus();
 
     return true;
 }
@@ -475,7 +492,12 @@ bool drive_mountarc_menu_callback(DOSBoxMenu * const menu,DOSBoxMenu::item * con
 
     if (dos_kernel_disabled) return true;
 
+    MAPPER_ReleaseAllKeys();
+    GFX_LosingFocus();
+    GFX_ReleaseMouse();
     MenuBrowseImageFile(drive+'A', true, false, false);
+    MAPPER_ReleaseAllKeys();
+    GFX_LosingFocus();
 
     return true;
 }
@@ -497,7 +519,12 @@ bool drive_mountimg_menu_callback(DOSBoxMenu * const menu,DOSBoxMenu::item * con
 
     if (dos_kernel_disabled) return true;
 
+    MAPPER_ReleaseAllKeys();
+    GFX_LosingFocus();
+    GFX_ReleaseMouse();
     MenuBrowseImageFile(drive+'A', false, false, false);
+    MAPPER_ReleaseAllKeys();
+    GFX_LosingFocus();
 
     return true;
 }
@@ -519,7 +546,12 @@ bool drive_mountimgs_menu_callback(DOSBoxMenu * const menu,DOSBoxMenu::item * co
 
     if (dos_kernel_disabled) return true;
 
+    MAPPER_ReleaseAllKeys();
+    GFX_LosingFocus();
+    GFX_ReleaseMouse();
     MenuBrowseImageFile(drive+'A', false, false, true);
+    MAPPER_ReleaseAllKeys();
+    GFX_LosingFocus();
 
     return true;
 }
@@ -551,7 +583,12 @@ bool drive_bootimg_menu_callback(DOSBoxMenu * const menu,DOSBoxMenu::item * cons
 
     if (dos_kernel_disabled) return true;
 
+    MAPPER_ReleaseAllKeys();
+    GFX_LosingFocus();
+    GFX_ReleaseMouse();
     MenuBrowseImageFile(drive+'A', false, true, false);
+    MAPPER_ReleaseAllKeys();
+    GFX_LosingFocus();
 
     return true;
 }
@@ -630,7 +667,6 @@ bool drive_rescan_menu_callback(DOSBoxMenu * const menu,DOSBoxMenu::item * const
 }
 
 int statusdrive=-1;
-void MAPPER_ReleaseAllKeys();
 bool drive_info_menu_callback(DOSBoxMenu * const menu,DOSBoxMenu::item * const menuitem) {
     (void)menu;//UNUSED
     (void)menuitem;//UNUSED
@@ -704,7 +740,6 @@ const DOSBoxMenu::callback_t drive_callbacks[] = {
     NULL
 };
 
-void GFX_ReleaseMouse();
 bool systemmessagebox(char const * aTitle, char const * aMessage, char const * aDialogType, char const * aIconType, int aDefaultButton) {
 #if !defined(HX_DOS)
     bool fs=sdl.desktop.fullscreen;
@@ -736,6 +771,27 @@ bool a20gate_on_menu_callback(DOSBoxMenu * const menu,DOSBoxMenu::item * const m
         std::string msg = "The A20 gate may be locked and cannot be "+std::string(bef?"disabled":"enabled")+".";
         systemmessagebox("Warning",msg.c_str(),"ok", "info", 1);
     }
+    return true;
+}
+
+void Get_IDECD_drives(std::vector<int> &v), MenuBrowseCDImage(char drive, int num);
+bool change_currentcd_menu_callback(DOSBoxMenu * const menu,DOSBoxMenu::item * const menuitem) {
+    (void)menu;//UNUSED
+    (void)menuitem;//UNUSED
+    std::vector<int> v = {};
+    if (dos_kernel_disabled) Get_IDECD_drives(v);
+    int num=0;
+    MAPPER_ReleaseAllKeys();
+    GFX_LosingFocus();
+    GFX_ReleaseMouse();
+    for (unsigned int idrive=0; idrive<DOS_DRIVES; idrive++) {
+        if (dos_kernel_disabled && std::find(v.begin(), v.end(), idrive) == v.end()) continue;
+        if (dynamic_cast<const isoDrive*>(Drives[idrive]) == NULL) continue;
+        MenuBrowseCDImage('A'+idrive, ++num);
+    }
+    if (!num) tinyfd_messageBox("Error","No CD drive is currently available.","ok","error", 1);
+    MAPPER_ReleaseAllKeys();
+    GFX_LosingFocus();
     return true;
 }
 
@@ -1051,7 +1107,6 @@ Bitu time_limit_ms = 0;
 
 extern bool keep_umb_on_boot;
 extern bool keep_private_area_on_boot;
-extern bool dos_kernel_disabled;
 bool guest_machine_power_on = false;
 
 std::string custom_savedir, savefilename = "";
@@ -1266,7 +1321,6 @@ double                      rtdelta = 0;
 bool                        emu_paused = false;
 bool                        mouselocked = false; //Global variable for mapper
 bool                        fullscreen_switch = true;
-bool                        dos_kernel_disabled = true;
 bool                        startup_state_numlock = false; // Global for keyboard initialisation
 bool                        startup_state_capslock = false; // Global for keyboard initialisation
 bool                        startup_state_scrlock = false; // Global for keyboard initialisation
@@ -3440,6 +3494,18 @@ bool setColors(const char *colorArray, int n) {
 	return true;
 }
 
+bool readTTFStyle(unsigned long& size, void*& font, FILE * fh) {
+    size = ftell(fh);
+    if (size != -1L) {
+        font = malloc((size_t)size);
+        if (font && !fseek(fh, 0, SEEK_SET) && fread(font, 1, (size_t)size, fh) == (size_t)size) {
+            fclose(fh);
+            return true;
+        }
+    }
+    return false;
+}
+
 std::string failName="";
 bool readTTF(const char *fName, bool bold, bool ital) {
 	FILE * ttf_fh = NULL;
@@ -3524,16 +3590,18 @@ bool readTTF(const char *fName, bool bold, bool ital) {
         }
     }
     if (ttf_fh) {
-		if (!fseek(ttf_fh, 0, SEEK_END))
-			if (((bold&&ital?ttfSizebi:(bold&&!ital?ttfSizeb:(!bold&&ital?ttfSizei:ttfSize))) = ftell(ttf_fh)) != -1L)
-				if ((bold&&ital?ttfFontbi:(bold&&!ital?ttfFontb:(!bold&&ital?ttfFonti:ttfFont))) = malloc((size_t)(bold&&ital?ttfSizebi:(bold&&!ital?ttfSizeb:(!bold&&ital?ttfSizei:ttfSize)))))
-					if (!fseek(ttf_fh, 0, SEEK_SET))
-						if (fread((bold&&ital?ttfFontbi:(bold&&!ital?ttfFontb:(!bold&&ital?ttfFonti:ttfFont))), 1, (size_t)(bold&&ital?ttfSizebi:(bold&&!ital?ttfSizeb:(!bold&&ital?ttfSizei:ttfSize))), ttf_fh) == (size_t)(bold&&ital?ttfSizebi:(bold&&!ital?ttfSizeb:(!bold&&ital?ttfSizei:ttfSize)))) {
-							fclose(ttf_fh);
-							return true;
-						}
-		fclose(ttf_fh);
-	}
+        if (!fseek(ttf_fh, 0, SEEK_END)) {
+            if (bold && ital && readTTFStyle(ttfSizebi, ttfFontbi, ttf_fh))
+                return true;
+            else if (bold && !ital && readTTFStyle(ttfSizeb, ttfFontb, ttf_fh))
+                return true;
+            else if (!bold && ital && readTTFStyle(ttfSizei, ttfFonti, ttf_fh))
+                return true;
+            else if (readTTFStyle(ttfSize, ttfFont, ttf_fh))
+                return true;
+        }
+        fclose(ttf_fh);
+    }
     if (!failName.size()||failName.compare(fName)) {
         failName=std::string(fName);
         std::string message="Could not load font file: "+std::string(fName)+(strlen(fName)<5||strcasecmp(fName+strlen(fName)-4, ".ttf")?".ttf":"");
@@ -13138,8 +13206,10 @@ int main(int argc, char* argv[]) SDL_MAIN_NOEXCEPT {
             item.set_text("DOS");
 
             {
-                DOSBoxMenu::item &item = mainMenu.alloc_item(DOSBoxMenu::item_type_id,"enable_a20gate").set_text("Enable A20 gate").
+                mainMenu.alloc_item(DOSBoxMenu::item_type_id,"enable_a20gate").set_text("Enable A20 gate").
                     set_callback_function(a20gate_on_menu_callback).check(MEM_A20_Enabled());
+                mainMenu.alloc_item(DOSBoxMenu::item_type_id,"change_currentcd").set_text("Change current CD image...").
+                    set_callback_function(change_currentcd_menu_callback);
             }
 
             {
