@@ -2354,6 +2354,16 @@ std::string GetIDEInfo() {
     return info;
 }
 
+void Get_IDECD_drives(std::vector<int> &v) {
+    for (int index = 0; index < MAX_IDE_CONTROLLERS; index++) {
+        IDEController *c = GetIDEController(index);
+        if (c) for (int slave = 0; slave < 2; slave++) {
+            IDEATAPICDROMDevice* d = dynamic_cast<IDEATAPICDROMDevice*>(c->device[slave]);
+            if (d) v.push_back(d->drive_index);
+        }
+    }
+}
+
 static IDEController* GetIDEController(Bitu idx) {
     if (idx >= MAX_IDE_CONTROLLERS) return NULL;
     return idecontroller[idx];
